--- a/index.html
+++ b/index.html
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | NFT preview card component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div class="container">
-  <h1>Equilibrium #3429</h1>
+    <title>Frontend Mentor | NFT preview card component</title>
 
-  <p class="desc">Our Equilibrium collection promotes balance and calm.</p>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <img src="./images/image-equilibrium.jpg" class="nft-img" alt="Image of Equilibrium #3429">
+      <h1>Equilibrium #3429</h1>
+      <p class="desc">Our Equilibrium collection promotes balance and calm.</p>
 
-  <p class="price">0.041 ETH</p>
-  <p class="time">3 days left</p>
-  
-  <p class="creator">Creation of Jules Wyvern</p>
-  </div>
-</body>
+      <img src="./images/icon-ethereum.svg" class="currency-icon" alt="Ethereum Currency Icon">
+      <p class="price">0.041 ETH</p>
+
+      <img src="./images/icon-clock.svg" class="clock-icon" alt=""
+      <p class="time">3 days left</p>
+      <hr>
+
+      <img src="./images/image-avatar.png" class="creator-img" alt="Image of Jules Wyvern">
+      <p class="creator">Creation of Jules Wyvern</p>
+    </div>
+  </body>
 </html>
