--- a/index.html
+++ b/index.html
@@ -19,19 +19,41 @@
   </head>
   <body>
     <div class="container">
-      <img src="./images/image-equilibrium.jpg" class="nft-img" alt="Image of Equilibrium #3429">
+      <div class="img-container">
+        <img
+          src="./images/image-equilibrium.jpg"
+          class="nft-img"
+          alt="Image of Equilibrium #3429"
+        />
+        <div class="view-container">
+          <img
+            src="./images/icon-view.svg"
+            class="view-img"
+            alt="Image of view icon"
+          />
+        </div>
+      </div>
       <h1>Equilibrium #3429</h1>
       <p class="desc">Our Equilibrium collection promotes balance and calm.</p>
 
-      <img src="./images/icon-ethereum.svg" class="currency-icon" alt="Ethereum Currency Icon">
+      <img
+        src="./images/icon-ethereum.svg"
+        class="currency-icon"
+        alt="Ethereum Currency Icon"
+      />
       <p class="price">0.041 ETH</p>
 
-      <img src="./images/icon-clock.svg" class="clock-icon" alt=""
+      <img src="./images/icon-clock.svg" class="clock-icon" alt="" />
       <p class="time">3 days left</p>
-      <hr>
+      <hr />
 
-      <img src="./images/image-avatar.png" class="creator-img" alt="Image of Jules Wyvern">
-      <p class="creator">Creation of Jules Wyvern</p>
+      <img
+        src="./images/image-avatar.png"
+        class="creator-img"
+        alt="Image of Jules Wyvern"
+      />
+      <p class="creator">Creation of</p>
+      <p class="creator-name">Jules Wyvern</p>
     </div>
   </body>
 </html>
