Fixed alt text for clock icon

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       />
       <p class="price">0.041 ETH</p>
 
-      <img src="./images/icon-clock.svg" class="clock-icon" alt="" />
+      <img src="./images/icon-clock.svg" class="clock-icon" alt="Clock icon" />
       <p class="time">3 days left</p>
       <hr />
 
